--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,10 @@
 body {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+
     {{- if .dark_mode }}
-    background-color: #000;
+    background-color: #181818;
     color: #fff;
     {{- else }}
     background-color: #fff;
